Fix button overlap bug on exerciseSession

--- a/public/css/exerciseSession.css
+++ b/public/css/exerciseSession.css
@@ -410,3 +410,13 @@
     transform: translateX(-50%);
   }
 }
+
+#exercise-list{
+    max-height: 51vh;
+  overflow-y: auto;
+}
+
+#exercise-detail{
+      max-height: 51vh;
+  overflow-y: auto;
+}
